--- a/style.css
+++ b/style.css
@@ -1,10 +1,16 @@
 main {
-    width: 50%;
+    width: 80%;
     height: 90vh;
     margin: 0 auto;
     background: orange;
     padding: 1em 3em;
+    display: flex;
 }
+
+main>div {
+    flex: 0 1 50%;
+}
+
 
 h1 {
     font-family: 'Abril Fatface', cursive;
@@ -25,6 +31,20 @@ section {
     box-shadow: 2px 2px 6px darkgoldenrod;
 }
 
+.halfs:first-child section {
+    margin: 2px 2em;
+    background: white;
+    color: black;
+    font-size: .8em;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+span {
+    margin: 0 1em 0 auto;
+    color: black;
+    cursor: pointer;
+}
+
 section:last-child {
     box-shadow: 8px 8px 15px darkgoldenrod;
 }
@@ -33,10 +53,20 @@ section:last-child {
     box-shadow: 2px 2px 6px darkgoldenrod;
 }
 
-div {
+section>div {
     flex: 0 1 50%;
     margin: .3em 1em;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+.halfs:first-child section.notPresent {
+    background: wheat;
+    color: gray;
+    box-shadow: none;
+}
+
+.halfs:first-child section>div {
+    margin: 0;
 }
 
 .myButton {
